Fix CORS and SecurityConfig for Render